log/build_2024-02-20_21-35-33/rob599_hw2/stderr.log
/usr/lib/python3/dist-packages/setuptools/command/install.py:34: SetuptoolsDeprecationWarning: setup.py install is deprecated. Use build and pip and other standards-based tools.
  warnings.warn(
  File "/home/chelse/ros2_ws/install/rob599_hw2/lib/python3.10/site-packages/rob599_hw2/nasa.py", line 36
    result.message = 'Rocket l
                     ^
SyntaxError: unterminated string literal (detected at line 36)

